--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
+
+
 body {
     background-color: #fff;
     padding: 20px;
     margin: 0;
+  }
+
+  .display{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 55%;
   }
 
   .center {
@@ -55,6 +67,9 @@ body {
     color: white;
    background: red;
    width: 130px;
+   font-family: 'Bangers';
+   letter-spacing: 2px;
+   font-weight: lighter;
   }
   .content {
     background-color: #fff;
@@ -70,3 +85,17 @@ body {
   .active {
     background-color: #FD0707;
   }
+
+  /* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 155px;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
